--- a/auth-modal.css
+++ b/auth-modal.css
@@ -37,7 +37,7 @@
 .auth-modal-brand {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   flex: 1;
   min-width: 0;
   height: 100px;
@@ -49,7 +49,7 @@
   height: 100px;
   max-width: 110px;
   object-fit: contain;
-  object-position: left center;
+  object-position: center center;
 }
 @media (max-width: 480px) {
   .auth-modal-brand {
